--- a/frontend/package.json
+++ b/frontend/package.json
@@ -248,15 +248,24 @@
     "yarn-deduplicate": "^3.1.0"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.4.1",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@material-ui/core": "^4.11.3",
     "electron-debug": "^3.1.0",
     "electron-log": "^4.2.4",
     "electron-updater": "^4.3.4",
+    "framer-motion": "^4.0.3",
     "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.3.0",
+    "react-sliding-pane": "^7.0.0",
     "regenerator-runtime": "^0.13.5",
-    "source-map-support": "^0.5.19"
+    "roboto-fontface": "^0.10.0",
+    "source-map-support": "^0.5.19",
+    "typeface-roboto": "^1.1.13"
   },
   "devEngines": {
     "node": ">=10.x",
