--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,7 +4,6 @@ twilio
 cmake
 opencv_python == 3.4.5.20
 dlib == 19.16.0
-Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
@@ -12,3 +11,4 @@ Werkzeug==1.0.1
 flask_api
 flask_cors
 flask_socketio
+flask
