--- a/frontend/package.json
+++ b/frontend/package.json
@@ -267,7 +267,8 @@
     "roboto-fontface": "^0.10.0",
     "socket.io-client": "^4.0.0",
     "source-map-support": "^0.5.19",
-    "typeface-roboto": "^1.1.13"
+    "typeface-roboto": "^1.1.13",
+    "validator": "^13.5.2"
   },
   "devEngines": {
     "node": ">=10.x",
